Enhance CORS configuration and update database initialization scripts